--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "bun run index.ts",
+    "create_db": "bun run tools/create_db.ts"
   }
 }
