--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "express": "^4.18.2"
+    "@types/jsonwebtoken": "^9.0.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "scripts": {
     "start": "bun run index.ts",
-    "create_db": "bun run tools/create_db.ts"
+    "create_db": "bun run tools/create_db.ts",
+    "generate_secret": "bun run tools/generate_token_secret.ts"
   }
 }
