--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,13 @@
     "allowJs": true,
     "types": [
       "bun-types" // add Bun global
-    ]
+    ],
+    "paths": {
+      "@routes/*": ["./routes/*"],
+      "@middleware/*": ["./middleware/*"],
+      "@dto/*": ["./dto/*"],
+      "@auth/*": ["./auth/*"],
+      "@db/*": ["./db/*"]
+    }
   }
 }
